# src/BranchOfficeBackend/APIServer/EmployeeHoursAPIModule.cs
@@ -3,6 +3,7 @@ using Carter;
 using Carter.ModelBinding;
 using Carter.Request;
 using Carter.Response;
+using Microsoft.AspNetCore.Http;
 
 namespace BranchOfficeBackend
 {
@@ -32,6 +33,22 @@ namespace BranchOfficeBackend
                     res.StatusCode = 200;
                     await res.Negotiate(weh);
                 }
+            });
+
+            Post("/api/employee_hours", async(req, res, routeData) => {
+                var result = req.BindAndValidate<WebEmployeeHours>();
+
+                try {
+                    service.AddEmployeeHours(result.Data);
+                } catch (ArgumentException ex) {
+                    res.StatusCode = 400;
+                    await res.WriteAsync(String.Format("Problem when adding the object to database: {0}", ex.Message));
+                    return;
+                }
+                
+                res.StatusCode = 201;
+                await res.Negotiate(result.ValidationResult.GetFormattedErrors());
+                return;
             });
         }
     }
