# swagger-branch-office.yaml
@@ -141,14 +141,14 @@ paths:
         type: "string"
         format: "string"
       responses:
-        200:
+        201:
           description: "successful operation"
           schema:
             $ref: "#/definitions/ApiResponse"
         401:
           description: "Unauthorized"
-        404:
-          description: "Employee not found"
+        400:
+          description: "Argument problem, e.g. no such employeeId"
       security:
         - branch_office_auth: []
   /api/employee_hours/{employeeHoursId}:
